# tiangou

./: .gitignore  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.mjs  vitest.config.ts
.github/workflows/: deploy.yml  release.yml
docs/superpowers/plans/: 2026-04-14-portal-event-stream-compact-dashboard.md
docs/superpowers/specs/: 2026-04-14-portal-event-stream-compact-dashboard-design.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: AllTokensPanel.tsx  CompactSniperBar.tsx  DailyStatsPanel.tsx  Dashboard.tsx  FilterPanel.tsx  LivePricePanel.tsx  PortalEventStream.tsx  SettingsDialog.tsx  SniperConfigPanel.tsx  StatusIndicator.tsx  TokenCard.tsx  TokenMonitor.tsx  TransactionTable.tsx  WalletButton.tsx
src/components/ui/: ErrorBoundary.tsx  Toast.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  slider.tsx  switch.tsx  tooltip.tsx
src/layouts/: Layout.astro
src/lib/: mempool-service.ts  sniper-engine.ts  token-cache.ts  utils.ts  wagmi.ts
src/lib/__tests__/: flap-constants.test.ts  portal-feed.test.ts
src/lib/dex/: abi.ts  constants.ts  index.ts  pancake.ts
src/lib/flap/: abi.ts  client.ts  constants.ts  external-dex.ts  indexer.ts  portal-feed.ts  positions.ts  trading.ts  types.ts
src/pages/: index.astro
src/store/: sniper.ts  toast.ts
src/styles/: global.css
